--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,9 +61,12 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - lib/images/burgers/
+    -  lib/images/dessert/
+    - lib/images/salad/
+    -  lib/images/drinks/ 
+    -  lib/images/slider/        
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
